--- a/projects/2017-rainy-day-power-spectrum/Makefile
+++ b/projects/2017-rainy-day-power-spectrum/Makefile
@@ -1,16 +1,20 @@
-.PHONY: all raw calibrate dirty-map transfer-matrix fisher-matrix power-spectrum
-all: dirty-map power-spectrum
+.PHONY: all raw calibrate dirty-map transfer-matrix fisher-matrix power-spectrum signal-injection
+all: dirty-map power-spectrum signal-injection
 raw: .pipeline/000-raw-data
 calibrate: .pipeline/002-calibrated-data
 dirty-map: .pipeline/032-dirty-map
 transfer-matrix: .pipeline/100-transfer-matrix
 fisher-matrix: .pipeline/121-fisher-matrix
 power-spectrum: .pipeline/123-quadratic-estimator
+signal-injection: .pipeline/123-injected-quadratic-estimator
 
 BIN=../../bin
 LIB=../../lib
 JULIA=julia-0.6 --color=yes
 LAUNCH=$(JULIA) $(BIN)/launch.jl
+
+####################################################################################################
+# DATA REDUCTION
 
 .pipeline/000-raw-data: $(LIB)/000-getdata.jl project.yml dada2ms.yml 000-getdata.yml
 	$(LAUNCH) --remote-workers 2 $^
@@ -26,6 +30,9 @@ LAUNCH=$(JULIA) $(BIN)/launch.jl
 .pipeline/001-flagged-calibrated-data: .pipeline/002-calibrated-data \
 		$(LIB)/001-flag.jl project.yml 001-flag-calibrated.yml
 	$(LAUNCH) $(filter-out .pipeline/%,$^)
+
+####################################################################################################
+# M-MODE ANALYSIS BASICS AND IMAGING
 
 .pipeline/030-folded-data: .pipeline/001-flagged-calibrated-data \
 		$(LIB)/030-fold.jl project.yml 030-fold.yml
@@ -53,13 +60,16 @@ LAUNCH=$(JULIA) $(BIN)/launch.jl
 
 .pipeline/102-noise-covariance-matrix: .pipeline/000-raw-data .pipeline/100-transfer-matrix \
 		.pipeline/101-averaged-transfer-matrix \
-		$(LIB)/102-noise-covariance-matrix.jl project.yml 101-noise-covariance-matrix.yml
+		$(LIB)/102-noise-covariance-matrix.jl project.yml 102-noise-covariance-matrix.yml
 	$(LAUNCH) --remote-workers 1 $(filter-out .pipeline/%,$^)
 
 .pipeline/103-compressed-m-modes: .pipeline/101-averaged-m-modes \
 		.pipeline/101-averaged-transfer-matrix .pipeline/102-noise-covariance-matrix \
 		$(LIB)/103-full-rank-compress.jl project.yml 103-full-rank-compress.yml
 	$(LAUNCH) --remote-workers 1 $(filter-out .pipeline/%,$^)
+
+####################################################################################################
+# FOREGROUND FILTERING AND QUADRATIC ESTIMATOR
 
 .pipeline/110-foreground-covariance-matrix: .pipeline/101-averaged-m-modes \
 		$(LIB)/110-foreground-covariance-matrix.jl project.yml 110-foreground-covariance-matrix.yml
@@ -90,5 +100,16 @@ LAUNCH=$(JULIA) $(BIN)/launch.jl
 .pipeline/123-quadratic-estimator: .pipeline/120-basis-covariance-matrices \
 		.pipeline/112-filtered-m-modes .pipeline/121-fisher-matrix .pipeline/122-noise-bias \
 		$(LIB)/123-quadratic-estimator.jl project.yml 123-quadratic-estimator.yml
+	$(LAUNCH) $(filter-out .pipeline/%,$^)
+
+.pipeline/124-injected-m-modes: .pipeline/103-compressed-m-modes \
+		.pipeline/112-filtered-m-modes \
+		$(LIB)/124-signal-injection.jl project.yml 124-signal-injection.yml
+	$(LAUNCH) $(filter-out .pipeline/%,$^)
+
+.pipeline/123-injected-quadratic-estimator: .pipeline/120-basis-covariance-matrices \
+		.pipeline/112-filtered-m-modes .pipeline/121-fisher-matrix .pipeline/122-noise-bias \
+		.pipeline/124-injected-m-modes \
+		$(LIB)/123-quadratic-estimator.jl project.yml 123-injected-quadratic-estimator.yml
 	$(LAUNCH) $(filter-out .pipeline/%,$^)
 
