add an option to time average the data as it comes in with 000-getdata.yml

--- a/projects/2018-rainy-day-tests/000-getdata.yml
+++ b/projects/2018-rainy-day-tests/000-getdata.yml
@@ -23,11 +23,11 @@ subbands:
     19: all
     20: all
     21: all
-times:
-    - 5
+times: 31430:38057
 pol:
     - true # xx
     - true # xy
     - true # yx
     - true # yy
+accumulate: true
 
