--- a/projects/2018-rainy-day-tests/Makefile
+++ b/projects/2018-rainy-day-tests/Makefile
@@ -10,13 +10,13 @@ JULIA=julia-0.6 --color=yes
 LAUNCH=$(JULIA) $(BIN)/launch.jl
 
 .pipeline/000-raw-data: $(LIB)/000-getdata.jl project.yml dada2ms.yml 000-getdata.yml
-	$(LAUNCH) $^
+	$(LAUNCH) --remote-workers 2 $^
 
-.pipeline/001-flagged-raw-data: .pipeline/000-raw-data \
-		$(LIB)/001-flag.jl project.yml 001-flag-raw.yml
-	$(LAUNCH) $(filter-out .pipeline/%,$^)
-
-.pipeline/002-calibrated-data: .pipeline/001-flagged-raw-data \
-		$(LIB)/002-calibrate.jl project.yml wsclean.yml 002-calibrate.yml
-	$(LAUNCH) $(filter-out .pipeline/%,$^)
+#.pipeline/001-flagged-raw-data: .pipeline/000-raw-data \
+#		$(LIB)/001-flag.jl project.yml 001-flag-raw.yml
+#	$(LAUNCH) $(filter-out .pipeline/%,$^)
+#
+#.pipeline/002-calibrated-data: .pipeline/001-flagged-raw-data \
+#		$(LIB)/002-calibrate.jl project.yml wsclean.yml 002-calibrate.yml
+#	$(LAUNCH) $(filter-out .pipeline/%,$^)
 
