--- a/projects/2017-rainy-day-power-spectrum/112b-foreground-filter.yml
+++ b/projects/2017-rainy-day-power-spectrum/112b-foreground-filter.yml
@@ -3,10 +3,10 @@ input-transfer-matrix: 103-compressed-transfer-matrix
 input-noise-matrix: 103-compressed-noise-covariance-matrix
 input-foreground-matrix: 110-foreground-covariance-matrix
 input-signal-matrix: 111-signal-covariance-matrix
-output-m-modes: 112-filtered-m-modes
-output-transfer-matrix: 112-filtered-transfer-matrix
-output-covariance-matrix: 112-filtered-covariance-matrix
-output-foreground-filter: 112-foreground-filter
-output-noise-whitener: 112-noise-whitener
+output-m-modes: 112b-filtered-m-modes
+output-transfer-matrix: 112b-filtered-transfer-matrix
+output-covariance-matrix: 112b-filtered-covariance-matrix
+output-foreground-filter: 112b-foreground-filter
+output-noise-whitener: 112b-noise-whitener
 threshold: 1.0
 
