reformat the Makefile to my new standard

--- a/projects/2017-rainy-day-power-spectrum/Makefile
+++ b/projects/2017-rainy-day-power-spectrum/Makefile
@@ -48,57 +48,73 @@ endef
 ####################################################################################################
 # DATA REDUCTION
 
-.pipeline/000-raw-data: $(LIB)/000-getdata.jl project.yml dada2ms.yml 000-getdata.yml
-	$(LAUNCH) --remote-workers 2 $^
+.pipeline/000-raw-data: \
+		$(LIB)/000-getdata.jl project.yml dada2ms.yml 000-getdata.yml
+	$(call launch-remote,2)
 
-.pipeline/001-flagged-raw-data: .pipeline/000-raw-data \
-		$(LIB)/001-flag.jl project.yml 001-flag-raw.yml
-	$(LAUNCH) $(filter-out .pipeline/%,$^)
+.pipeline/001-flagged-raw-data: \
+		$(LIB)/001-flag.jl project.yml 001-flag-raw.yml \
+		.pipeline/000-raw-data
+	$(launch)
 
-.pipeline/002-calibrated-data: .pipeline/001-flagged-raw-data \
-		$(LIB)/002-calibrate.jl project.yml wsclean.yml 002-calibrate.yml
-	$(LAUNCH) --remote-workers 1 $(filter-out .pipeline/%,$^)
+.pipeline/002-calibrated-data: \
+		$(LIB)/002-calibrate.jl project.yml wsclean.yml 002-calibrate.yml \
+		.pipeline/001-flagged-raw-data
+	$(call launch-remote,1)
 
-.pipeline/001-flagged-calibrated-data: .pipeline/002-calibrated-data \
-		$(LIB)/001-flag.jl project.yml 001-flag-calibrated.yml
-	$(LAUNCH) $(filter-out .pipeline/%,$^)
+.pipeline/001-flagged-calibrated-data: \
+		$(LIB)/001-flag.jl project.yml 001-flag-calibrated.yml \
+		.pipeline/002-calibrated-data
+	$(launch)
 
 ####################################################################################################
 # M-MODE ANALYSIS BASICS AND IMAGING
 
-.pipeline/030-folded-data: .pipeline/001-flagged-calibrated-data \
-		$(LIB)/030-fold.jl project.yml 030-fold.yml
-	$(LAUNCH) --remote-workers 1 $(filter-out .pipeline/%,$^)
+.pipeline/030-folded-data: \
+		$(LIB)/030-fold.jl project.yml 030-fold.yml \
+		.pipeline/001-flagged-calibrated-data
+	$(call launch-remote,1)
 
-.pipeline/031-m-modes: .pipeline/030-folded-data .pipeline/100-transfer-matrix \
-		$(LIB)/031-getmmodes.jl project.yml 031-getmmodes.yml
-	$(LAUNCH) --remote-workers 1 $(filter-out .pipeline/%,$^)
+.pipeline/031-m-modes: \
+		$(LIB)/031-getmmodes.jl project.yml 031-getmmodes.yml \
+		.pipeline/030-folded-data \
+		.pipeline/100-transfer-matrix
+	$(call launch-remote,1)
 
-.pipeline/032-dirty-map: .pipeline/031-m-modes .pipeline/100-transfer-matrix \
-		$(LIB)/032-tikhonov.jl project.yml 032-tikhonov.yml
-	$(LAUNCH) --remote-workers 1 $(filter-out .pipeline/%,$^)
+.pipeline/032-dirty-map: \
+		$(LIB)/032-tikhonov.jl project.yml 032-tikhonov.yml \
+		.pipeline/031-m-modes \
+		.pipeline/100-transfer-matrix
+	$(call launch-remote,1)
 
-.pipeline/100-transfer-matrix: .pipeline/000-raw-data \
-		$(LIB)/100-transfer-matrix.jl project.yml 100-transfer-matrix.yml
-	$(LAUNCH) --remote-workers 4 $(filter-out .pipeline/%,$^)
+.pipeline/100-transfer-matrix: \
+		$(LIB)/100-transfer-matrix.jl project.yml 100-transfer-matrix.yml \
+		.pipeline/000-raw-data
+	$(call launch-remote,4)
 
-.pipeline/101-averaged-m-modes: .pipeline/031-m-modes \
-		$(LIB)/101-average-channels.jl project.yml 101-average-channels-m-modes.yml
-	$(LAUNCH) --remote-workers 1 $(filter-out .pipeline/%,$^)
+.pipeline/101-averaged-m-modes: \
+		$(LIB)/101-average-channels.jl project.yml 101-average-channels-m-modes.yml \
+		.pipeline/031-m-modes
+	$(call launch-remote,1)
 
-.pipeline/101-averaged-transfer-matrix: .pipeline/100-transfer-matrix \
-		$(LIB)/101-average-channels.jl project.yml 101-average-channels-transfer-matrix.yml
-	$(LAUNCH) --remote-workers 1 $(filter-out .pipeline/%,$^)
+.pipeline/101-averaged-transfer-matrix: \
+		$(LIB)/101-average-channels.jl project.yml 101-average-channels-transfer-matrix.yml \
+		.pipeline/100-transfer-matrix
+	$(call launch-remote,1)
 
-.pipeline/102-noise-covariance-matrix: .pipeline/000-raw-data .pipeline/100-transfer-matrix \
+.pipeline/102-noise-covariance-matrix: \
+		$(LIB)/102-noise-covariance-matrix.jl project.yml 102-noise-covariance-matrix.yml \
+		.pipeline/000-raw-data \
+		.pipeline/100-transfer-matrix \
+		.pipeline/101-averaged-transfer-matrix
+	$(call launch-remote,1)
+
+.pipeline/103-compressed-m-modes: \
+		$(LIB)/103-full-rank-compress.jl project.yml 103-full-rank-compress.yml \
+		.pipeline/101-averaged-m-modes \
 		.pipeline/101-averaged-transfer-matrix \
-		$(LIB)/102-noise-covariance-matrix.jl project.yml 102-noise-covariance-matrix.yml
-	$(LAUNCH) --remote-workers 1 $(filter-out .pipeline/%,$^)
-
-.pipeline/103-compressed-m-modes: .pipeline/101-averaged-m-modes \
-		.pipeline/101-averaged-transfer-matrix .pipeline/102-noise-covariance-matrix \
-		$(LIB)/103-full-rank-compress.jl project.yml 103-full-rank-compress.yml
-	$(LAUNCH) --remote-workers 1 $(filter-out .pipeline/%,$^)
+		.pipeline/102-noise-covariance-matrix
+	$(call launch-remote,1)
 
 ####################################################################################################
 # FOREGROUND FILTERING AND QUADRATIC ESTIMATOR
