subtract the common mode rfi from the dataset

--- a/projects/2017-rainy-day-power-spectrum/020-peel.yml
+++ b/projects/2017-rainy-day-power-spectrum/020-peel.yml
@@ -1,4 +1,4 @@
-input: 001-flagged-calibrated-data
+input: 011-rfi-subtracted-data
 output: 020-peeled-data
 output-residuals: 020-peeling-residuals
 metadata: metadata
